introduce data/delete endpoint
